--- a/src/Views/Widgets/Welcome.xaml
+++ b/src/Views/Widgets/Welcome.xaml
@@ -127,6 +127,16 @@
 
                                 <Path Grid.Column="0" Margin="2,0,0,0" x:Name="Icon" Width="16" Height="16" Data="{StaticResource Icon.Git}"/>
 
+                                <controls:Bookmark
+                                    Grid.Column="0"
+                                    Margin="2,0,0,0"
+                                    x:Name="BookmarkIcon"
+                                    Width="16" Height="16"
+                                    Color="{Binding Bookmark}"
+                                    IsNewPage="False"
+                                    HideOnZero="False"
+                                    Visibility="Collapsed"/>
+
                                 <StackPanel Grid.Column="1" x:Name="Contents" Orientation="Horizontal">
                                     <TextBlock Margin="8,0" Text="{Binding Name}"/>
                                     <TextBlock x:Name="Path" Text="{Binding Id}" Foreground="{DynamicResource Brush.FG2}"/>
@@ -145,18 +155,16 @@
                                     IsHitTestVisible="True"
                                     Visibility="Collapsed"/>
 
-                                <controls:Bookmark
-                                    Grid.Column="2"
-                                    Width="14" Height="14"
-                                    Color="{Binding Bookmark}"
-                                    IsNewPage="False"
-                                    HideOnZero="True"/>
                             </Grid>
                         </Border>
 
                         <HierarchicalDataTemplate.Triggers>
                             <DataTrigger Binding="{Binding IsGroup}" Value="True">
                                 <Setter TargetName="Path" Property="Visibility" Value="Collapsed"/>
+                            </DataTrigger>
+                            <DataTrigger Binding="{Binding IsGroup}" Value="False">
+                                <Setter TargetName="Icon" Property="Visibility" Value="Collapsed"></Setter>
+                                <Setter TargetName="BookmarkIcon" Property="Visibility" Value="Visible"></Setter>
                             </DataTrigger>
                             <MultiDataTrigger>
                                 <MultiDataTrigger.Conditions>
