style<Welcome>: fix wrong icon displayed for group folder in repositories manager

--- a/src/Views/Widgets/PageTabBar.xaml
+++ b/src/Views/Widgets/PageTabBar.xaml
@@ -58,8 +58,7 @@
                                                 <controls:Bookmark
                                                     Width="14" Height="14"
                                                     IsNewPage="{Binding IsWelcomePage}"
-                                                    Color="{Binding Bookmark}"
-                                                    HideOnZero="False"/>
+                                                    Color="{Binding Bookmark}"/>
 
                                                 <TextBlock
                                                     Grid.Column="1"
